Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12219

CMake project manager cannot automatically switch between DEBUG and RELEASE configurations

    XMLWordPrintable

Details

    Description

      When using the QMake project manager, two configurations per project are created: one for DEBUG and one for RELEASE. With CMake, these are not created and configurations have to be manually switched by selecting "Rerun CMake..." and then manually entering "-DCMAKE_BUILD_TYPE=DEBUG" or "-DCMAKE_BUILD_TYPE=RELEASE".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            waddlesplash waddlesplash
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes