src/plugins/cmakeprojectmanager/cmakebuildconfiguration.h
@@ -64,6 +64,9 @@ public:
 
     void emitBuildTypeChanged();
 
+    void setInitialArguments(const QString &arguments);
+    QString initialArguments() const;
+
 signals:
     void useNinjaChanged(bool);
 
@@ -74,6 +77,7 @@ protected:
 private:
     QString m_msvcVersion;
     bool m_useNinja;
+    QString m_initialArguments;
 
     friend class CMakeProjectManager::CMakeProject;
 };
@@ -101,7 +105,17 @@ public:
 
 private:
     bool canHandle(const ProjectExplorer::Target *t) const;
-    CMakeBuildInfo *createBuildInfo(const ProjectExplorer::Kit *k, const QString &sourceDir) const;
+
+    enum BuildType { BuildTypeNone = 0,
+                     BuildTypeDebug = 1,
+                     BuildTypeRelease = 2,
+                     BuildTypeRelWithDebInfo = 3,
+                     BuildTypeMinSizeRel = 4,
+                     BuildTypeLast = 5 };
+
+    CMakeBuildInfo *createBuildInfo(const ProjectExplorer::Kit *k,
+                                    const QString &sourceDir,
+                                    BuildType buildType) const;
 };
 
 } // namespace Internal
